2014-01-07  Bastien Guerry  <bzg@gnu.org>

	* emacs-lisp/package.el (package-delete): Also delete the package
	name from `package-alist', not its description only.

2014-01-07  Glenn Morris  <rgm@gnu.org>

	* help.el (view-external-packages):
	* menu-bar.el (menu-bar-help-extra-packages):
	Visit efaq.info rather than etc/MORE.STUFF.

2014-01-07  Juri Linkov  <juri@jurta.org>

	* isearch.el (isearch-mode-map): Bind [return] and [backspace] to
	isearch-exit and isearch-delete-char resp.  (Bug#16342, bug#16035)

	* progmodes/ps-mode.el (ps-mode-map): Remove [return] key binding
	that shadows RET.  (Bug#16342)

2014-01-07  Chong Yidong  <cyd@gnu.org>

	* isearch.el (isearch-yank-char, isearch-yank-word)
	(isearch-yank-line): Doc fix.

2014-01-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* abbrev.el (define-abbrev): Beware new meaning of fboundp.
	* emacs-lisp/elint.el (elint-find-builtins):
	* emacs-lisp/eldoc.el (eldoc-symbol-function):
	* emacs-lisp/bytecomp.el (byte-compile-callargs-warn)
	(byte-compile-file-form-defmumble, byte-compile, byte-compile-form):
	* emacs-lisp/byte-opt.el (byte-compile-inline-expand):
	* apropos.el (apropos-safe-documentation):
	* subr.el (symbol-file): Remove redundant fboundp.
	* progmodes/idlw-shell.el (idlwave-shell-comint-filter): Use defalias.

2014-01-06  Bastien Guerry  <bzg@gnu.org>

	* hl-line.el (global-hl-line-overlay): Make a local variable.
	(global-hl-line-overlays): New variable to store all overlays.
	(global-hl-line-mode): Don't delete overlays from the current
	buffer when `global-hl-line-sticky-flag' is non-nil.
	(global-hl-line-highlight): Add new overlays to
	`global-hl-line-overlays'.
	(global-hl-line-unhighlight-all): New function to delete all
	overlays when turning off `global-hl-line-mode'.
	This fixes Bug#16183.

2014-01-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* subr.el (set-transient-map): Fix nested case and docstring.

2014-01-06  Tassilo Horn  <tsdh@gnu.org>
